--- a/Calculator/app/src/main/res/values/strings.xml
+++ b/Calculator/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">Calculator</string>
+    <string name="scalar1">1</string>
+    <string name="scalar2">2</string>
+    <string name="scalar3">3</string>
+    <string name="scalar4">4</string>
+    <string name="scalar5">5</string>
+    <string name="scalar6">6</string>
+    <string name="scalar7">7</string>
+    <string name="scalar8">8</string>
+    <string name="scalar9">9</string>
+    <string name="scalar0">0</string>
+    <string name="deleteKey">Del</string>
+    <string name="plus">+</string>
+    <string name="minus">-</string>
+    <string name="multiply">*</string>
+    <string name="divide">/</string>
+    <string name="enter">Enter</string>
+    <string name="clear">Clr</string>
+    <string name="openParen">(</string>
+    <string name="closeParen">)</string>
 </resources>
