--- a/Calculator/app/src/main/res/values/strings.xml
+++ b/Calculator/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Calculator</string>
+    <string name="initialExpression">" "</string>
     <string name="scalar1">1</string>
     <string name="scalar2">2</string>
     <string name="scalar3">3</string>
