--- a/Calculator/app/src/main/res/values/strings.xml
+++ b/Calculator/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="scalar8">8</string>
     <string name="scalar9">9</string>
     <string name="scalar0">0</string>
+    <string name="decimal_point">.</string>
     <string name="deleteKey">Del</string>
     <string name="plus">+</string>
     <string name="minus">-</string>
