--- a/Calculator/app/src/main/res/values/strings.xml
+++ b/Calculator/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="clear">Clr</string>
     <string name="openParen">(</string>
     <string name="closeParen">)</string>
+    <string name="carrot">^</string>
 </resources>
