Added trig buttons and made it so that numbers next to parens makes it multiply.

--- a/Calculator/app/src/main/res/values/strings.xml
+++ b/Calculator/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="openParen">(</string>
     <string name="closeParen">)</string>
     <string name="carrot">^</string>
+    <string name="sine">sin(</string>
+    <string name="cosine">cos(</string>
+    <string name="tangent">tan(</string>
 </resources>
