Added asin/acos/atan, unit tests, and bug fixes.

--- a/Calculator/app/src/main/res/values/strings.xml
+++ b/Calculator/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="sine">sin(</string>
     <string name="cosine">cos(</string>
     <string name="tangent">tan(</string>
+    <string name="arcsine">asin(</string>
+    <string name="arccosine">acos(</string>
+    <string name="arctangent">atan(</string>
 </resources>
