--- a/Calculator/app/src/main/res/values/strings.xml
+++ b/Calculator/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="e">e</string>
     <string name="log">log(</string>
     <string name="nat_log">ln(</string>
+    <string name ="absolute_value">abs(</string>
 </resources>
